# win-instant-replay

./: Cargo.toml  LICENSE  README.md  config.example.toml
.github/: release.yml
.github/workflows/: ci.yml  release.yml
packaging/: README-WINDOWS.txt
scripts/: package-release.ps1
src/: config.rs  ffmpeg.rs  lib.rs  main.rs  retention.rs  windows_app.rs
