[package]
name = "win-instant-replay"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Windows tray app for disk-backed instant replay clips powered by ffmpeg"
license = "MIT"
readme = "README.md"
repository = "https://github.com/mgrobot-ai/win-instant-replay"
homepage = "https://github.com/mgrobot-ai/win-instant-replay"
keywords = ["windows", "screen-recording", "ffmpeg", "tray", "replay"]
categories = ["multimedia::video", "os::windows-apis"]

[lib]
name = "win_instant_replay"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["clock", "serde"] }
directories = "5.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_System_LibraryLoader",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
] }
